# unshroud

./: Cargo.toml  Readme.md
src/: cli.rs  main.rs
src/config/: loader.rs  mod.rs  types.rs
src/core/: buffer.rs  engine.rs  mod.rs  state.rs  triggers.rs
src/plugins/: internal.rs  listener.rs  mod.rs  protocol.rs
src/storage/: bundle.rs
src/tests/: e2e.rs
tests/: e2e.rs
