[package]
name = "unshroud"
version = "0.1.0"
edition = "2021"
description = "autonomous diagnostic agent for Unix-like systems. It acts as a 'black box' for your services, automatically capturing forensic context when anomalies occur—so you never have to guess why a process crashed at 3 AM."
license = "Apache-2.0"
authors = ["omagalaktion@gmail.com"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "test-util"] }
anyhow = "1.0"
serde_json = "1.0"
tokio-stream = "0.1"
zstd = "0.13"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"    
overflow-checks = false


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.aarch64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]